1. Added signal (component and service) 2. Added mat spinner 3. Add navbar to landing page is user is logged in 4. Remove Login button is user is logged in

--- a/cityweather-app/angular.json
+++ b/cityweather-app/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -97,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "5dc8c6ce-df8f-4d30-bcc9-ac7b3a5fc6b0"
   }
 }
